test/libsolidity/syntaxTests/contractBaseLocation/duplicated_layout_keyword.sol
contract C layout layout at 0x1234ABC { }
// ----
// ParserError 1994: (18-24): Expected 'at' but got identifier
// ParserError 2314: (28-37): Expected '{' but got 'Number'
